Fixed button alignment in chat sample

--- a/samples/chat/styles/styles.css
+++ b/samples/chat/styles/styles.css
@@ -56,6 +56,6 @@ input[type=button]:hover {
 
 #sendButton {
 	width: 60px;
-	height: 30px;
+	height: 27px;
 	display: inline-block;
 }
